// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input.html - {"bogus1":true} format 1`] = `
====================================options=====================================
bogus1: true
parsers: ["html", "angular"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<input type='text'>

=====================================output=====================================
<input type="text" />

================================================================================
`;

exports[`input.html - {"bogus2":true,"htmlVoidTags":true} format 1`] = `
====================================options=====================================
bogus2: true
htmlVoidTags: true
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<input type='text'>

=====================================output=====================================
<input type="text">

================================================================================
`;

exports[`input.html - {"bogus3":true,"htmlVoidTags":true} format 1`] = `
====================================options=====================================
bogus3: true
htmlVoidTags: true
parsers: ["angular"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<input type='text'>

=====================================output=====================================
<input type="text" />

================================================================================
`;
